# RAG-Types

./: .gitignore  LICENSE  pyproject.toml
Advanced_Rag/: advanced.py  instruction.txt
Hybrid_Rag/: hybrid.py
LoRA/: README.md  lora.py
LoRA/results-lora-modernbert/checkpoint-12630/: optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
LoRA/results-lora-modernbert/checkpoint-4210/: README.md  adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
LoRA/results-lora-modernbert/checkpoint-8420/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
LoRA/results-lora-modernbert/final_model/: adapter_config.json  adapter_model.safetensors
Naive_Rag/: naive.py  naive_local.py
