[project]
name = "rag-train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.0",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.10.0",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.49",
    "langchain-experimental>=0.3.4",
    "langchain-groq>=0.3.1",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.3.0",
    "langgraph>=0.3.21",
    "numpy>=2.2.4",
    "peft>=0.15.1",
    "pypdf>=5.4.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.6.1",
    "streamlit>=1.44.0",
    "torch>=2.6.0",
    "transformers>=4.50.2",
]
